# vask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: client_onboarding.yaml  crm_call_log.yaml  incident_response.yaml  lead_qualification.yaml  weekly_report.yaml
tests/: conftest.py  test_config.py  test_context.py  test_http_tool.py  test_pipeline.py  test_registry.py  test_shell_tool.py  test_tool_registry.py  test_types.py
vask/: __init__.py  __main__.py  auth.py  cli.py  config.py  logging.py  webhooks.py  workflows.py
vask/api/: __init__.py  models.py  server.py
vask/core/: context.py  pipeline.py  registry.py  types.py
vask/inputs/: base.py  clipboard.py  file.py  mic.py
vask/llm/: anthropic.py  base.py  gemini.py  openai.py  router.py
vask/mcp/: server.py
vask/outputs/: base.py  clipboard.py  json_out.py  terminal.py
vask/plugins/: __init__.py  loader.py
vask/plugins/google_workspace/: __init__.py  plugin.yaml  tools.py
vask/plugins/slack/: __init__.py  plugin.yaml  tools.py
vask/plugins/sql/: __init__.py  plugin.yaml  tools.py
vask/tools/: base.py  http.py  registry.py  shell.py
vask/transcribe/: base.py  openai.py
