[project]
name = "vask"
version = "0.1.0"
description = "Voice-to-Action framework — pluggable audio capture, transcription, LLM reasoning, and tool execution. Runs standalone or as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Harish" }]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "mcp>=1.0",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=1.0",
    # API server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Plugin system
    "pyyaml>=6.0",
    # SQL plugin
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "httpx"]
slack = ["slack-sdk>=3.0"]
google = ["google-auth>=2.0", "google-api-python-client>=2.0"]
sql-postgres = ["asyncpg>=0.29"]
sql-mysql = ["aiomysql>=0.2"]
all = ["vask[slack,google,sql-postgres]"]

[project.scripts]
vask = "vask.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
